# cmake_clang_tools

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  check_settings_change.py  clang_format_check.py  clang_tidy_check.py  cmake_clang_tools-macros.cmake.in  cmake_uninstall.cmake.in  config.yaml  package.xml  run_cmake_clang_tools_trigger.py
cmake/: cmake_clang_tools-macros.cmake.in  cmake_clang_toolsConfig.cmake.in
config/: .clang-tidy  config.yaml
example/: CMakeLists.txt  README.md
example/include/: ClangToolsExample.hpp  helper_functions.hpp
example/src/: ClangToolsExample.cpp  main.cpp
test/: test_cmake_clang_tools.py
