<?xml version="1.0"?>
<package format="2">
  <name>cmake_clang_tools</name>
  <version>0.6.0</version>
  <description>CMake helpers for clang-tidy / clang-format.</description>
  <license>BSD</license>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_export_depend>clang</buildtool_export_depend>
  <buildtool_export_depend>clang-format</buildtool_export_depend>
  <buildtool_export_depend>clang-tidy</buildtool_export_depend>
  <buildtool_export_depend>python3-yaml</buildtool_export_depend>
  <export>
    <!-- Specify that this is not really a ROS package-->
    <build_type>cmake</build_type>
  </export>
</package>
