<?xml version="1.0"?>
<package format="2">
  <name>cmake_clang_tools</name>
  <version>1.0.16</version>
  <description>CMake wrapper for clang-tidy and clang-format.</description>
  <license>BSD</license>

  <maintainer email="mgaertner@anybotics.com">Magnus Gaertner</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>

  <buildtool_depend>cmake</buildtool_depend>

  <buildtool_export_depend>clang</buildtool_export_depend>
  <buildtool_export_depend>clang-format</buildtool_export_depend>
  <buildtool_export_depend>clang-tidy</buildtool_export_depend>
  <buildtool_export_depend>python3-yaml</buildtool_export_depend>

  <build_depend>python3-pytest</build_depend>

  <export>
    <!-- Specify that this is not really a ROS package-->
    <build_type>cmake</build_type>
  </export>

</package>
